<resources>
    <string name="app_name">Kursovaya Basyul</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="log_in_button_text">Войти</string>
    <string name="login_button_text">Войти</string>
    <string name="create_account_text">Создать аккаунт</string>
    <string name="title_profile">Профиль</string>
    <string name="title_parking">Парковка</string>
    <string name="title_settings">Настройки</string>
    <string name="reserve_place">Зарезервировать место</string>
    <string name="cancel_reserve">Отменить резервирование</string>
    <string name="free_places">Свободных мест</string>
    <string name="repeat_password_hint">Повторить пароль</string>
    <string name="cancel_button_text">Отмена</string>
    <string name="fio_hint">ФИО</string>
    <string name="number_hint">Телефон</string>
    <string name="address_hint">Адрес</string>
    <string name="car_brand_hint">Марка</string>
    <string name="car_model_hint">Модель</string>
    <string name="car_color">Цвет</string>
    <string name="info_about_car">Информация о машине</string>
    <string name="info_about_client">Информация о клиенте</string>
    <string name="hourly_tariff">Почасовой</string>
    <string name="tariff">Тариф</string>
    <string name="info_about_tariff">Тариф</string>
    <string name="daily_tariff">Ежедневный</string>
    <string name="monthly_tariff">Ежемесячный</string>
    <string name="profile_old_password">Старый пароль</string>
    <string name="new_password_hint">Новый пароль</string>
    <string name="change_password">Изменить пароль</string>
    <string name="log_out">Выйти из аккаунта</string>
    <string name="emp_login">Вход для сотрудника</string>
    <string name="accept_button">Подтвердить</string>
    <string name="change_info">Изменить информацию</string>
    <string name="employees">Сотрудники</string>
    <string name="new_employee">Новый сотрудник</string>
    <string name="employee_key">Секретный ключ сотрудника</string>
    <string name="employee_fio">ФИО</string>
    <string name="employee_address">Адрес</string>
    <string name="create_new_employee">Создать нового сотрудника</string>
    <string name="hourly_price">Почасовая цена:</string>
    <string name="daily_price">Цена за сутки:</string>
    <string name="tarrifs">Цены на тарифы</string>
    <string name="zero_places">Мест нет</string>
    <string name="all_movings">Все</string>
    <string name="going">В пути</string>
    <string name="parked">Припаркованы</string>
    <string name="goes_away">Уехали</string>
    <string name="search">Поиск</string>
    <string name="search_by_number">Поиск по номеру</string>
</resources>
