<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.exazoom.kursovayabasyul.ProfileFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/info_about_client"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_margin="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profile_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1"
                    android:hint="@string/login_hint"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/profile_fio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1"
                    android:hint="@string/fio_hint"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/profile_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1"
                    android:hint="@string/address_hint" />

                <EditText
                    android:id="@+id/profile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/info_about_tariff"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_margin="4dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/profile_hourly_tariff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hourly_tariff"/>

                <RadioButton
                    android:id="@+id/profile_daily_tariff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_tariff"/>

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/info_about_car"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_margin="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profile_car_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/profile_car_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1"
                    android:hint="@string/car_brand_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profile_car_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1"
                    android:hint="@string/car_model_hint" />

                <EditText
                    android:id="@+id/profile_car_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1"
                    android:hint="@string/car_color" />

            </LinearLayout>

            <Button
                android:id="@+id/change_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/round_button"
                android:text="@string/change_info"
                android:textColor="#FFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/change_password"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_margin="4dp"/>

            <EditText
                android:id="@+id/profile_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2pt"
                android:hint="@string/profile_old_password"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/profile_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:hint="@string/new_password_hint"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/profile_repeat_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:hint="@string/repeat_password_hint"
                    android:inputType="textPassword" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:text="@string/change_password"
                    android:textColor="#FFF" />

                <Button
                    android:id="@+id/log_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:text="@string/log_out"
                    android:textColor="#FFF" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
