<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/info_about_client"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_margin="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/registration_login_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1"
                    android:hint="@string/login_hint"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/registration_fio_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1"
                    android:hint="@string/fio_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/registration_address_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1"
                    android:hint="@string/address_hint" />

                <EditText
                    android:id="@+id/registration_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/registration_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/registration_repeat_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:hint="@string/repeat_password_hint"
                    android:inputType="textPassword" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/info_about_tariff"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_margin="4dp"/>

            <RadioGroup
                android:id="@+id/tariffs_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/hourly_tariff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hourly_tariff"/>

                <RadioButton
                    android:id="@+id/daily_tariff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_tariff"/>

                <!--<RadioButton-->
                    <!--android:id="@+id/monthly_tariff"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/monthly_tariff"/>-->

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/info_about_car"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_margin="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/car_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/car_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1"
                    android:hint="@string/car_brand_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/car_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1"
                    android:hint="@string/car_model_hint" />

                <EditText
                    android:id="@+id/car_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    android:layout_weight="1"
                    android:hint="@string/car_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/create_account_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:text="@string/create_account_text"
                    android:textColor="#FFF" />

                <Button
                    android:id="@+id/cancel_button_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:text="@string/cancel_button_text"
                    android:textColor="#FFF" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

