<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.exazoom.kursovayabasyul.EmpProfileFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/profile_employee_fio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2pt"
        android:textSize="24sp"
        android:textColor="#000"/>

    <EditText
        android:id="@+id/profile_employee_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2pt"
        android:hint="@string/employee_address" />

    <EditText
        android:id="@+id/profile_employee_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2pt" />

    <Button
        android:id="@+id/change_employee"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/change_info"
        android:textColor="#FFF"
        android:background="@drawable/round_button"/>

    <Button
        android:id="@+id/exit_emp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/log_out"
        android:textColor="#FFF"
        android:background="@drawable/round_button"/>

</LinearLayout>
